--- a/plugin.xml
+++ b/plugin.xml
@@ -42,6 +42,7 @@
                 <string>fb-messenger</string>
                 <string>instagram</string>
                 <string>webexteams</string>
+                <string>webex</string>
                 <string>webexteams://</string>
                 <string>com.cisco.sparks</string>
             </array>
